--- a/NotesTesting/NotesTesting.vcxproj
+++ b/NotesTesting/NotesTesting.vcxproj
@@ -112,14 +112,18 @@
   <ItemGroup>
     <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MathNode.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Output.cpp" />
+    <ClCompile Include="Parse.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
+    <ClInclude Include="MathNode.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Output.h" />
+    <ClInclude Include="Parse.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
